<resources>
    <string name="app_name">Drone Control</string>
    <string name="button_text">Start Control</string>

    <string name="title_activity_server_control">ServerControl</string>
    <string name="server_connect">Connect to Server</string>
    <string name="server_disconnect">Disconnect from Server</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_server_connect">Server Connect</string>
    <string name="arm_drone">Arm Drone</string>
    <string name="unarm_drone">Unarm Drone</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="manu_name">Crazepony</string>
</resources>
