<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_material_dark"
    android:fitsSystemWindows="true"
    tools:context="com.nothawk.dronecontrol.ServerConnect">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <com.nothawk.dronecontrol.AttitudeIndicator
        android:id="@+id/fullscreen_content"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/fullscreen_content_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/serverStartEnd"
            style="?metaButtonBarButtonStyle"
            android:layout_width="146dp"
            android:layout_height="34dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/server_connect"
            android:textOn="@string/server_disconnect"
            app:layout_constraintBottom_toTopOf="@+id/armButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/connectButton"
            android:layout_width="164dp"
            android:layout_height="36dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textOff="@string/connect"
            android:textOn="@string/disconnect"
            app:layout_constraintBottom_toTopOf="@+id/armButton"
            app:layout_constraintEnd_toStartOf="@+id/serverStartEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/armButton"
            android:layout_width="159dp"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:checked="false"
            android:textOff="@string/arm_drone"
            android:textOn="@string/unarm_drone"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="208dp"
            android:layout_height="37dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:max="1000"
            android:min="0"
            android:progress="0"
            android:rotation="270"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="109dp"
            android:layout_height="21dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
